# sol-plus-plus

./: .gitignore  CMakeLists.txt  README.md  options.cmake
include/: solace_client.hpp  solconfig.hpp
sample/: subscriber.cpp
sample/capnp/: CMakeLists.txt  addressbook.capnp  person.capnp  phonenumber.capnp
sample/cpp/: pubsub.cpp
solclient-7.15.0.47/include/solclient/: solClient.h  solClientMsg.h
solclient-7.15.0.47/lib/: libsolclient.1.dylib
solclient-7.15.0.47/lib/dynamic_options/: libsolclient.so.1  libsolclient_dynamicJudy.1.7.15.0.47.dylib
src/: solace_client.cpp
